# trading-ml

./: .gitignore  README.md  TODO.md  dvc.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
analysis/: performance.ipynb  trading_performance.ipynb
ckpts/: .gitignore
config/: config.yaml  data.yaml  db_example.yaml  model_config.yaml  models.yaml
data/: .gitignore  cli.csv  wiener_boerse_17_2000-01-03_2023-09-22.csv.dvc  wiener_boerse_17ts_20000103-20230922.csv.dvc
frontend/: dashboard.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/data/: .gitignore  backtest.csv  forecast.csv  performance.csv  predictions.csv  test_metrics.csv  test_performance.csv  test_predictions.csv  trades.csv
notebooks/: EDA.ipynb  hyperparameter_tuning.ipynb  hypertuning_analysis_arima.ipynb  hypertuning_arima.ipynb  hypertuning_neural_nets.ipynb  hypertuning_neural_networks.ipynb  hypertuning_prophet.ipynb  performance_analysis.ipynb  recommendation_analysis.ipynb
notebooks/tuning/: hypertuning_arima.ipynb  hypertuning_boosting.ipynb  hypertuning_exponential_smoothing.ipynb  hypertuning_moving_average.ipynb  hypertuning_neural_nets.ipynb  hypertuning_prophet.ipynb
results/: .gitignore  forecast.csv  optimization.csv  performance.csv  predictions.csv  recommendation.json  test_metrics.json  trades.csv  trades_performance.csv  trades_statistics.csv  trades_statistics.json  validation.csv  validation.json  validation_metrics.json
src/: backtesting.py  cli.py  data_preparation.py  forecast.py  hypertuning.py  hypertuning_boosting.py  hypertuning_local.py  hypertuning_neural_nets.py  hypertuning_nn.py  optimization.py  prediction.py  recommendation.py  recommendation_buy.py  recommendation_close.py  recommendation_open.py  trades.py  validation.py  visualization.py
src/main/: dvc.yaml  (+6 more)
tests/: test_backtesting.py  test_data.csv  test_data_classes.py  test_data_preparation.py  test_data_preprocessing.py  test_data_processing.py  test_evaluation.py  test_indicators.py  test_models.py  test_prepare.py  test_trades.csv  test_trades.py  test_utils.py
(+71 files in other folders)
