[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ml"
version = "0.1"
description = "Machine Learning for Stock Trading"
authors = [{ name = "Dominic Reichl", email = "office@dominicreichl.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "yfinance==0.2.20",
    "numpy==1.23.5",
    "pandas==2.0.2",
    "scikit-learn==1.3.0",
    "tensorflow-cpu==2.13.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "SQLAlchemy==2.0.21",
    "pymysql==1.1.0",
    "pytest==7.4.0",
    "mlforecast==0.9.3",
    "lightgbm==4.1.0",
    "sktime==0.23.0",
    "pmdarima==2.0.3",
    "xgboost==2.0.0",
    "prophet==1.1.4",
    "optuna==3.3.0",
    "dvc==3.26.2",
    "dvc-gdrive==2.20.0",
    "plotly==5.17.0",
    # "pandas-datareader==0.10.0",
    # "pandas-market-calendars==4.1.4",
    # "ta==0.10.2",
    # "backtesting==0.3.3",
    # "statsmodels==0.14.0",
    # "statsforecast==1.6.0",
]

[project.scripts]
trading-ml = "cli:cli"
