[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ml"
version = "0.1"
description = "Machine Learning for Stock Trading"
authors = [{ name = "Dominic Reichl", email = "office@dominicreichl.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.1",
    "numpy==1.23.5",
    "click==8.1.7",
    "scikit-learn==1.3.0",
    "tensorflow-cpu==2.13.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "SQLAlchemy==2.0.21",
    "pymysql==1.1.0",
    "pytest==7.4.0",
    "mlforecast==0.9.3",
    "lightgbm==4.1.0",
    "pmdarima==2.0.4",        # because statsforecast==1.6.0 conflicts with pandas 2
    "sktime==0.24.0",
    "xgboost==2.0.0",
    "prophet==1.1.4",
    "dvc==3.26.2",
    "dvc-gdrive==2.20.0",
    "plotly==5.17.0",
    "streamlit==1.27.2",
    "optuna==3.4.0",
    "ta==0.10.2",
    "statsmodels==0.14.0",
]

[project.scripts]
trading-ml = "cli:cli"
